# hephaestus-haskell

./: .gitignore  .gitlab-ci.yml  Dockerfile  Main.hs  README.md  config.yaml  hephaestus.cabal  main.md
app/: Config.hs  EmbeddedFiles.hs  Main.hs  Middleware.hs  Util.hs
app/Components/: Article.hs  ArticleContent.hs  FileBrowser.hs
app/Pages/: FileViewPage.hs  ReaderPage.hs  ViewPage.hs
app/Routes/: FileRoutes.hs  Patterns.hs  ResourceRoutes.hs  TrashRoutes.hs  ViewRoutes.hs
bk/: Main.hs
embeddedFiles/: index.md
embeddedFiles/defaultRoot/: index.md
embeddedFiles/defaultRoot/markdown/: sample.md  syntax-highlighting.md
embeddedFiles/defaultRoot/testFiles/raw files/: test.sh
embeddedFiles/web/: script.js
embeddedFiles/web/stylesheets/: catppuccin.css  collapselist.css  pandoc.css  styles.css  syntax-hightlighting.css
markdown/: main.md
test/: test.md
web/: collapselist.css  script.js
web/stylesheets/: collapselist.css  fonts.css  pandoc.css  styles.css
