cabal-version:      2.4
name:               hephaestus
version:            0.1.0.0

description: A webserver that serves Markdown files as HTML pages

author:             nikkischnelle
maintainer:         nikki@tschierske.com

executable hephaestus
    main-is:          Main.hs

    ghc-options:
        -threaded

    build-depends:    
        base ^>=4.17.2.0,
        scotty,
        pandoc,
        blaze-html,
        text,
        directory,
        unix,
        filepath,
        wai-extra,
        wai-middleware-static,
        bytestring,
        wai,
        http-types,
        blaze-builder,
        yaml,
        log-base,
        file-embed,
        magic

    other-modules:
        Pages.ReaderPage
        Pages.ViewPage
        Pages.FileViewPage
        Components.ArticleContent
        Components.FileBrowser
        Routes.FileRoutes
        Routes.ResourceRoutes
        Routes.TrashRoutes
        Routes.ViewRoutes
        Routes.Patterns
        Util
        Middleware
        Config
        EmbeddedFiles

    hs-source-dirs:   app
    default-language: Haskell2010
